# efficientNetB0

./: .gitignore  README.md  Topicos1_2026_1_AP1.ipynb  historico_treinamento.csv  pyproject.toml  requirements.txt
