[project]
name = "dog-classifier"
version = "0.1.0"
description = "Projeto de classificação de imagens com PyTorch"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "torch",
    "torchvision",
    "torchsummary",
    "scikit-learn",
    "kagglehub",
    "ipykernel>=7.2.0",
]
