[project]
name = "dog-classifier"
version = "0.1.0"
description = "Projeto de classificação de imagens com PyTorch"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "torch",
    "torchvision",
    "torchsummary",
    "scikit-learn",
    "kagglehub",
    "ipykernel>=7.2.0",
    "prettytable>=3.17.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
